# TRAFIC_GENERATOR

./: .gitignore  README.md  pyproject.toml  requirements.txt
builder/: __init__.py  builder_config.py  builder_gui.py  builder_service.py  model_editor.py  preview_panel.py  xml_generator.py  xml_loader.py
common/: __init__.py  constants.py  enums.py  exceptions.py  metrics.py  schema_models.py  schema_parser.py  schema_validator.py  serializer.py  testgen_header.py  utils.py
native/: FINAL_MVP_SENDER_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md
native/cpp_backend/: CMakeLists.txt  pyproject.toml
native/cpp_backend/src/: bindings.cpp  errors.cpp  errors.h  sender.cpp  sender.h  serializer.cpp  serializer.h  testgen.cpp  testgen.h
native/rust_backend/: Cargo.toml  pyproject.toml
native/rust_backend/src/: errors.rs  lib.rs  sender.rs  serializer.rs  testgen.rs  transport.rs
receiver/: __init__.py  json_exporter.py  pcap_recorder.py  receiver_cli.py  receiver_config.py  receiver_engine.py  receiver_gui.py  receiver_service.py  receiver_worker.py
schemas/: NewTestPacket.xml  TEST_1_Couner.xml  sample_packet.xml  test1.xml
scripts/: run_builder_gui.py
sender/: __init__.py  frame_builder.py  packet_producer.py  sender_config.py  sender_engine.py  sender_gui.py  sender_service.py  sender_worker.py
tests/: test_backend_selection.py  test_builder_service.py  test_frame_builder.py  test_integration_payload_roundtrip.py  test_json_exporter.py  test_metrics.py  test_model_editor.py  test_mvp_transport_metrics.py  test_packet_producer.py  test_payload_consistency.py  test_payload_parsing.py  (+19 more)
(+28 files in other folders)
