[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "trafic-generator"
version = "0.1.0"
description = "Traffic generator project"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.maturin]
manifest-path = "native/rust_backend/Cargo.toml"
module-name = "trafic_native"
python-source = "."
